# TC4SE

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: FindSGX.cmake  SigningKey-Development.pem
common/: CMakeLists.txt
common/openssl/: AsymmetricKey.cpp  SSLObject.cpp  VectorBIO.cpp  X509Certificate.cpp
common/trusted/: TrustedAttestationService.cpp
common/untrusted/: AttestationService.cpp  CurlUtil.cpp  SGXShimDCAP.cpp  SGXShimDCAP.h  SocketManager.cpp
include/tc4se/: AttestationService.h  Constants.h  ErrorCode.h  OpenSSL.h  SGXHandler.h  TC4SETrustedLibs.edl
include/tc4se/untrusted/: CurlUtil.h  SocketManager.h
test/: CMakeLists.txt  TestIntelRATLS.cpp  TestTC4SE.cpp  TestTSL.cpp
trusted-channel-scheme/: CMakeLists.txt
trusted-channel-scheme/intel-ratls/: CMakeLists.txt  IntelRATLSEnclave.cpp  IntelRATLSEnclave.edl  common.h  openssl_utility.cpp  openssl_utility.h  ucommon.cpp  verify_callback.cpp
trusted-channel-scheme/tc4se/: CMakeLists.txt  TC4SEClient.cpp  TC4SEClient.edl  TC4SEServer.cpp  TC4SEServer.edl
trusted-channel-scheme/trusted-socket-layer/: CMakeLists.txt  TSLEnclave.cpp  TSLEnclave.edl
